# ticketing-system

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  config.py  database.py  distributed_lock.py  main.py  queue.py  redis_client.py  tasks.py
app/api/: __init__.py
app/api/v1/: __init__.py  bookings.py  dependencies.py  events.py  reservations.py  router.py  seats.py
app/api/v2/: __init__.py  dependencies.py  queue.py  reservations.py  router.py  websocket.py
app/models/: __init__.py  base.py  booking.py  event.py  reservation.py  seat.py
app/schemas/: __init__.py  booking.py  common.py  event.py  reservation.py  seat.py  v2.py
app/services/: __init__.py  booking_service.py  event_service.py  queued_reservation_service.py  reservation_service.py  seat_service.py
db/: init.sql
